--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.3",
+    "@prisma/client": "^5.13.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/typography": "^0.5.13",
+    "@tanstack/react-query": "^5.34.1",
+    "@trpc/client": "^11.0.0-rc.364",
+    "@trpc/next": "^11.0.0-rc.364",
+    "@trpc/react-query": "^11.0.0-rc.364",
+    "@trpc/server": "^11.0.0-rc.364",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.376.0",
@@ -19,7 +25,8 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -28,6 +35,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "prisma": "^5.13.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
