--- a/package.json
+++ b/package.json
@@ -12,22 +12,30 @@
     "@clerk/nextjs": "^5.0.3",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tailwindcss/typography": "^0.5.13",
     "@tanstack/react-query": "^5.34.1",
     "@trpc/client": "^11.0.0-rc.364",
     "@trpc/next": "^11.0.0-rc.364",
     "@trpc/react-query": "^11.0.0-rc.364",
     "@trpc/server": "^11.0.0-rc.364",
+    "@uploadthing/react": "^6.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-loading-skeleton": "^3.4.0",
+    "react-pdf": "^8.0.0",
+    "react-resize-detector": "^10.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.10.1",
     "zod": "^3.23.6"
   },
   "devDependencies": {
