--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@clerk/nextjs": "^5.0.3",
     "@hookform/resolvers": "^3.3.4",
+    "@langchain/pinecone": "^0.0.4",
+    "@pinecone-database/pinecone": "^2.2.0",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -27,8 +29,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "langchain": "^0.1.36",
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
@@ -36,6 +40,7 @@
     "react-loading-skeleton": "^3.4.0",
     "react-pdf": "^8.0.0",
     "react-resize-detector": "^10.0.1",
+    "react-textarea-autosize": "^8.5.3",
     "simplebar-react": "^3.2.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
