--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@clerk/nextjs": "^5.0.3",
     "@hookform/resolvers": "^3.3.4",
+    "@langchain/openai": "^0.0.29",
     "@langchain/pinecone": "^0.0.4",
+    "@mantine/hooks": "^7.10.0",
     "@pinecone-database/pinecone": "^2.2.0",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -26,18 +28,21 @@
     "@trpc/react-query": "^11.0.0-rc.364",
     "@trpc/server": "^11.0.0-rc.364",
     "@uploadthing/react": "^6.5.1",
+    "ai": "^3.1.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "langchain": "^0.1.36",
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
+    "openai": "^4.47.1",
     "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.4",
     "react-loading-skeleton": "^3.4.0",
+    "react-markdown": "^9.0.1",
     "react-pdf": "^8.0.0",
     "react-resize-detector": "^10.0.1",
     "react-textarea-autosize": "^8.5.3",
