--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@langchain/openai": "^0.0.29",
     "@langchain/pinecone": "^0.0.4",
     "@mantine/hooks": "^7.10.0",
+    "@paypal/react-paypal-js": "^8.3.0",
     "@pinecone-database/pinecone": "^2.2.0",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
@@ -30,6 +32,7 @@
     "@trpc/server": "^11.0.0-rc.364",
     "@uploadthing/react": "^6.5.1",
     "ai": "^3.1.8",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
